14/09/2011 Changes

**FIXED** bug where an instance method called class is not parsed correctly.
This was fixed with a 'hack' where the preprocessor outputs a class method as
'Object _class_ >>' which works, but needs to be changed later.


13/09/2011 Changes

Added support for traditional subclass keywords, plus new shorthand.
Added outstanding super sends.
Added trace output as a guide for TODO items.


12/09/2011 Changes

Added support for cascading message expressions. Tested with unary messages.
Added warning about a possible stack balance problem with cascaded messages. Posted to 
ASM news group to find out if I need to add more code to balance stack.
Added long subclass: keyword support - see examples/st.redline.Subclass.
Adding creation of an Array via Smalltalk - creates a ProtoObject array.
Implementing a few indexable primitives - size, at:, at:with:


11/09/2011 Changes

Changed creation of Integer instances to use single method. Need to make rest of instance
creation use this approach. 
Add back some output when methods are applied - helps with debugging while we wait for 
Transcript support. (Coming later today).
Added method argument load support, so you can reference method arguments. Working on 
store side, which is an error. ie: Can't methodArgument := value.
Replaced long license comment with simpler one liner.
Multiple argument method calls.
Basic Magnitude protocol.
Parts of the Boolean protocols.
Switching Integer to be backed by a BigDecimal.
True and False classes.

10/09/2011 Changes

Adding PowerMock and EasyMock for unit testing
Adding first unit test of an Integer primitive
Removed unnecessary Bootstrapping of Number classes
Fixing equality checks on Integers
Adding Cobertura plugin to generate code coverage reports on demand
Adding 100% unit test coverage of Integer primitives


10/09/2011 Changes

Start of Number support.  Adding object creation for basic Numbers.
All LiteralNumbers parse as Integers now.


10/09/2011 Changes
