@@ -3,6 +3,7 @@
 **FIXED** bug where an instance method called class is not parsed correctly.
 This was fixed with a 'hack' where the preprocessor outputs a class method as
 'Object _class_ >>' which works, but needs to be changed later.
+Added generation of Character instances.
 
 
 13/09/2011 Changes
